tests/sksl/errors/SwizzleTooManyComponents.glsl
### Compilation failed:

error: 1: too many components in swizzle mask
void func() { float4 test = float2(1).xxxxx; }
                                          ^
1 error
